# halo2-demo

./: Cargo.toml
src/: main.rs
src/mydemo/: a_equals_b.rs  a_plus_b_eq_c.rs  mod.rs  range_check.rs
src/mydemo/mimc/: mod.rs  sc_box.rs
src/range_check/: example1.rs  example2.rs  mod.rs  table.rs
src/zk/: cs.rs  mod.rs  wrapper.rs
