[package]
name = "halo2-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev-graph = ["halo2_proofs/dev-graph"]

[dependencies]
halo2_proofs = { git = "https://github.com/junyu0312/halo2", branch = "gpu", default-features = true }
plotters = "0.3.5"
tabbycat = { version = "0.1", features = ["attributes"], optional = true }